test/syntax/37-case_stmt-1-err.c
// ======================================================================

/* case_stmt -> CASE num COLON statement */

// ======================================================================

void main(void)
{
  int i;

  switch (i) {
    case 0; {}	// error: not COLON
  }
}

// ======================================================================
